--- a/front/src/app/layout/header/header.component.scss
+++ b/front/src/app/layout/header/header.component.scss
@@ -1,7 +1,23 @@
 header {
   height: 3em;
   background-color: #eee;
+  display: flex;
+  align-items: center;
+  a {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    span {
+      font-size: 1.3em;
+    }
 
+    text-decoration: inherit;
+    color: inherit;
+    &:hover {
+      text-decoration: underline;
+    }
+    padding: 0 0.5em;
+  }
   img {
     height: 2.5em;
   }
