--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -5,3 +5,48 @@
 body {
   font-family: sans-serif;
 }
+
+main {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+button {
+  padding: 0.5em 1em;
+  &:not(:disabled) {
+    cursor: pointer;
+
+    border: 0.1em solid #eee;
+    background-color: #eee;
+
+    &:hover {
+      border-color: #ddd;
+      background-color: #ddd;
+    }
+
+    &:active {
+      border-color: #ccc;
+      background-color: #ccc;
+    }
+
+    &.primary {
+      background-color: black;
+      color: #fff;
+
+      &:hover {
+        border-color: #444;
+        background-color: #444;
+      }
+
+      &:active {
+        border-color: #555;
+        background-color: #555;
+      }
+    }
+  }
+}
