dev: legal style

--- a/front/src/app/routes/legal/legal.component.html
+++ b/front/src/app/routes/legal/legal.component.html
@@ -1,1 +1,54 @@
-<p>legal works!</p>
+<main>
+  <h1>Mentions légales</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolor
+    facere culpa deleniti obcaecati dignissimos quam nam vero inventore rerum
+    provident adipisci omnis commodi, optio consequuntur eum similique
+    consectetur quos.
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum enim unde,
+    velit ex perferendis porro perspiciatis labore neque? Minus quos cum
+    asperiores laboriosam dolorum, quae aliquid quod voluptatum voluptate
+    molestias.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum fugit
+    dolor repudiandae libero eum, iure aliquam commodi, eius alias, repellat
+    excepturi. Dolorum ducimus earum cum enim, amet vel aperiam.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolor
+    facere culpa deleniti obcaecati dignissimos quam nam vero inventore rerum
+    provident adipisci omnis commodi, optio consequuntur eum similique
+    consectetur quos.
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum enim unde,
+    velit ex perferendis porro perspiciatis labore neque? Minus quos cum
+    asperiores laboriosam dolorum, quae aliquid quod voluptatum voluptate
+    molestias.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum fugit
+    dolor repudiandae libero eum, iure aliquam commodi, eius alias, repellat
+    excepturi. Dolorum ducimus earum cum enim, amet vel aperiam.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolor
+    facere culpa deleniti obcaecati dignissimos quam nam vero inventore rerum
+    provident adipisci omnis commodi, optio consequuntur eum similique
+    consectetur quos.
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum enim unde,
+    velit ex perferendis porro perspiciatis labore neque? Minus quos cum
+    asperiores laboriosam dolorum, quae aliquid quod voluptatum voluptate
+    molestias.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum fugit
+    dolor repudiandae libero eum, iure aliquam commodi, eius alias, repellat
+    excepturi. Dolorum ducimus earum cum enim, amet vel aperiam.
+  </p>
+</main>
