--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -2,14 +2,24 @@
 
 @import "../node_modules/normalize.css/normalize.css";
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 }
 
 main {
+  margin: 0 auto;
   display: flex;
   flex-flow: column;
   align-items: center;
+  padding: 0.5em;
+  width: 100%;
+  max-width: 50em;
 }
 
 h1 {
