--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -3,7 +3,7 @@
 
   <div class="content">
     <nav>
-      <button>Ajouter</button>
+      <button routerLink="add">Ajouter</button>
       <button>Supprimer</button>
     </nav>
 
