--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -18,7 +18,7 @@
       <tbody>
         <tr *ngFor="let a of articles">
           <td class="name">{{ a.name }}</td>
-          <td class="price">{{ a.price }} €</td>
+          <td class="price">{{ a.price | currency: "EUR" }}</td>
           <td class="Qty">{{ a.qty }}</td>
         </tr>
       </tbody>
