--- a/front/src/app/stock/add/add.component.html
+++ b/front/src/app/stock/add/add.component.html
@@ -1,17 +1,17 @@
 <main>
   <h1>Ajout d'un article</h1>
-  <form>
+  <form [formGroup]="f">
     <label>
       <div>Nom</div>
-      <input type="text" />
+      <input type="text" formControlName="name" />
     </label>
     <label>
       <div>Prix</div>
-      <input type="number" />
+      <input type="number" formControlName="price" step="0.01" min="0" />
     </label>
     <label>
       <div>Quantité</div>
-      <input type="text" />
+      <input type="number" formControlName="qty" min="0" />
     </label>
 
     <button class="primary">Ajouter</button>
