--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -4,7 +4,7 @@
   <div class="content">
     <nav>
       <button routerLink="add">Ajouter</button>
-      <button *ngIf="selectedArticles.size > 0">Supprimer</button>
+      <button [hidden]="selectedArticles.size == 0">Supprimer</button>
     </nav>
 
     <table>
