--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -29,7 +29,7 @@
           (click)="toggle(a)"
           *ngFor="let a of articleService.articles"
         >
-          <td class="name">{{ a.name }}</td>
+          <td class="name">{{ a.name | ellipsis: 13 }}</td>
           <td class="price">{{ a.price | currency: "EUR" }}</td>
           <td class="Qty">{{ a.qty }}</td>
         </tr>
