--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -27,7 +27,7 @@
         <tr
           [class.selected]="selectedArticles.has(a)"
           (click)="toggle(a)"
-          *ngFor="let a of articleService.articles"
+          *ngFor="let a of articleService.articles$ | async"
         >
           <td class="name">{{ a.name | ellipsis: 13 }}</td>
           <td class="price">{{ a.price | currency: "EUR" }}</td>
