--- a/front/src/app/widget/article-table/article-table.component.html
+++ b/front/src/app/widget/article-table/article-table.component.html
@@ -1,9 +1,9 @@
-<table>
+<table aria-label="Liste d'article">
   <thead>
     <tr>
-      <th class="name">Nom</th>
-      <th class="price">Prix</th>
-      <th class="Qty">Quantité</th>
+      <th scope="col" class="name">Nom</th>
+      <th scope="col" class="price">Prix</th>
+      <th scope="col" class="Qty">Quantité</th>
     </tr>
   </thead>
   <tbody>
